plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Kiosk Backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// MinIO(S3 호환) 오브젝트 스토리지 클라이언트. 업로드 이미지를 로컬 디스크 대신 MinIO 에 저장한다.
	implementation 'io.minio:minio:8.5.14'
	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

// `./gradlew bootRun` 실행 시 backend/.env 를 읽어 환경변수로 주입한다.
// (application.yml 의 ${SERVER_PORT}, ${SPRING_DATASOURCE_URL} 등이 이 값으로 치환됨)
// 이미 셸에서 export 한 변수가 있으면 그 값을 우선해 .env 가 덮어쓰지 않는다.
def loadDotEnv = { File f ->
	def env = [:]
	if (f.exists()) {
		f.eachLine { rawLine ->
			def line = rawLine.trim()
			if (line.isEmpty() || line.startsWith('#')) return
			def idx = line.indexOf('=')
			if (idx <= 0) return
			def key = line.substring(0, idx).trim()
			def value = line.substring(idx + 1).trim()
			if (value.length() >= 2 &&
				((value.startsWith('"') && value.endsWith('"')) ||
				 (value.startsWith("'") && value.endsWith("'")))) {
				value = value.substring(1, value.length() - 1)
			}
			env[key] = value
		}
	}
	return env
}

tasks.named('bootRun') {
	loadDotEnv(file('.env')).each { k, v ->
		if (System.getenv(k) == null) {
			environment(k, v)
		}
	}
}
